--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,5 +1,8 @@
-html,body,#app{
+html,body,#app {
     height: 100%;
     margin: 0;
     padding: 0;
+}
+.el-breadcrumb {
+    margin-bottom: 10px;
 }
