--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,11 +1,19 @@
-html,body,#app {
+html,
+body,
+#app {
     height: 100%;
     margin: 0;
     padding: 0;
 }
+
 .el-breadcrumb {
     margin-bottom: 10px;
 }
+
 .el-cascader-menu {
     height: 250px;
+}
+
+.el-pagination {
+    margin-top: 10px;
 }
